# lede_wifimedia

./: API.txt  data.txt  hostap_new.tgz  hostapd.sh  hostapd_ft.tgz  hostapd_lede.tgz  hostapd_new.sh
MESHdesk/: Makefile
MESHdesk/files/: a.lua  apstart  heartbeat.lua  md_prerun  media_uci_default  meshdesk  meshdeskcbi.lua
MESHdesk/files/alfred_scripts/: alfred_report_to_server.lua
MESHdesk/files/libs/: rdAlfred.lua  rdConfig.lua  rdGateway.lua  rdNetwork.lua
activation/files/: initd_wifimedia_check  license_uci
advance/: Makefile
advance/files/: 35-wan_detect.hotplus  4GLTE_model.lua  advance_controller.lua  advance_model.lua  banner_  bridge_controller.lua  bridge_model.lua  codename  controller.sh  controller_local.sh  dhcp_relay_controller.lua  dhcp_relay_model.lua  index.htm  initd_network_reload  initd_upwifi  initd_wifimedia_check  switchmode_controller.lua  switchmode_model.lua  variables.sh  wifimedia_uci_default
advance/files/etc/: codename
advance/files/root/: advance_model.lua  gw_index.htm
config/: wrt940n_feeds.conf.default
ctcgfw/luci-app-airwhu/: Makefile
feeds_for_openwrt/: README.md
feeds_for_openwrt/carrier-monitor/: Makefile
feeds_for_openwrt/carrier-monitor/files/: test.hotplug  (+1 more)
feeds_for_openwrt/horst-ubus/: Makefile
feeds_for_openwrt/juci-translations-zh/: Makefile
feeds_for_openwrt/lbase64/: Makefile
feeds_for_openwrt/libeuci/: Makefile
feeds_for_openwrt/libeuci/src/: CMakeLists.txt  libeuci.c  libeuci.h  test.c
feeds_for_openwrt/lsyslog/: Makefile
feeds_for_openwrt/lua-daemon/: Makefile
feeds_for_openwrt/lua-daemon/src/: CMakeLists.txt  daemon.c  test.lua
feeds_for_openwrt/lua-ev/: Makefile
feeds_for_openwrt/lua-forkpty/: Makefile
feeds_for_openwrt/lua-ip/: Makefile
feeds_for_openwrt/lua-ip/src/: CMakeLists.txt  README  ip.c
feeds_for_openwrt/lua-requests/: Makefile
feeds_for_openwrt/luci-app-wifi_sniffer/: Makefile
feeds_for_openwrt/mongoose/: Makefile
feeds_for_openwrt/opencapwap/: Makefile
feeds_for_openwrt/shellinabox/: Makefile
feeds_for_openwrt/statistics-shell/: Makefile
hotspot/: Makefile
instance/: Makefile
instance/files/: codename  controller_local.sh  variables.sh  wifimedia_uci_default
jsda/luci-app-eqos/: Makefile
jsda/luci-app-ssr-plus-jsda/: Makefile
license/: Makefile
license/files/: initd_wifimedia_check  license.sh
licensegw/: Makefile
licensegw/files/: initd_wifimedia_check  license_uci
mtk-openwrt/openwrt-mt7610e/: Makefile
opencapwap/: .Makefile.swp  Makefile
updates/: Makefile
watchcat/: Makefile
watchcat/files/: rssi.sh  watchcat.sh
watchdogtimer/files/: watchcat.sh  watchcat.sh~HEAD
wifi-portal/: Makefile
wifimedia/advance/: Makefile
wifimedia/injection/: Makefile
wifimedia/wifimedia_portal/: Makefile
wifimedia_portal/: Makefile
wifimedia_portal/files/: captive_portal.sh  del_network_nds.sh  heartbeat.sh  nodogsplash  nodogsplash_init  nodogsplash_preauth.sh  portal_model.lua  preauthenticated_rules.sh  uci_portal  wifimedia_portal.lua
(+121 files in other folders)
