cmake_minimum_required(VERSION 2.6)

PROJECT(libeuci C)

ADD_LIBRARY(euci SHARED libeuci.c)
TARGET_LINK_LIBRARIES(euci uci)

ADD_EXECUTABLE(test test.c)
TARGET_LINK_LIBRARIES(test euci)

INSTALL(FILES libeuci.h
	DESTINATION include
)

INSTALL(TARGETS euci
	LIBRARY DESTINATION lib
	RUNTIME DESTINATION bin
)
